# linux-uapi

./: .gitignore  Cargo.toml  build.rs  idea.txt  sys.rs
src/: define_syscall.rs  lib.rs  sys.csv  tests.c  tests.rs
src/arch/: mod.rs  syscall.rs
src/arch/x86_64/: error.rs  io_uring.rs  l1.rs  l2.rs  l2_types.rs  l3.rs  mod.rs  result.rs  socket.rs  sys.rs  types.rs  values.rs
