
[package]
name = "linux-uapi"
version = "0.1.0"
authors = ["Santuchin <santuccini@proton.me>"]
edition = "2024"
description = "A library to user Linux User API in a Rust-like way"
license = "0BSD"

[dependencies]
libc = "0.2.177"
tokio = { version = "1.48.0", features = ["full"] }

[build-dependencies]
bindgen = { version = "0.72.1" }
